--- a/demo/w09/midprep_stud_69/p3_69/p3_69.html
+++ b/demo/w09/midprep_stud_69/p3_69/p3_69.html
@@ -45,6 +45,6 @@
       </div>
       <div id="footer">Footer</div>
     </div>
-    <script src="js/p3_xx.js"></script>
+    <script src="js/p3_69.js"></script>
   </body>
 </html>
